<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_settings"
    tools:context=".CarConsumableActivity">

    <Button
        android:id="@+id/updateButtonCarConsumables"
        android:layout_width="237dp"
        android:layout_height="58dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/button_background"
        android:text="@string/UpdateButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DistributionButton" />

    <TextView
        android:id="@+id/CarConsumablesScreen"
        android:layout_width="321dp"
        android:layout_height="63dp"
        android:layout_marginTop="92dp"
        android:text="@string/CarConsumablesScreen"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/expireCarDistribution"
        android:layout_width="167dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="56dp"
        android:text="@string/NoDateLabel"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/DistributionButton"
        app:layout_constraintTop_toBottomOf="@+id/expireOil" />

    <TextView
        android:id="@+id/expireOil"
        android:layout_width="167dp"
        android:layout_height="54dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:text="@string/NoDateLabel"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/OilButton"
        app:layout_constraintTop_toBottomOf="@+id/ExpireDateLabel" />

    <TextView
        android:id="@+id/TypesLabel"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/TypesLabel"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CarConsumablesScreen" />

    <TextView
        android:id="@+id/ExpireDateLabel"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="48dp"
        android:text="@string/ExpireDateLabel"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/TypesLabel"
        app:layout_constraintTop_toBottomOf="@+id/CarConsumablesScreen" />


    <Button
        android:id="@+id/OilButton"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background"
        android:text="@string/OilButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TypesLabel" />

    <Button
        android:id="@+id/DistributionButton"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_background"
        android:text="@string/DistributionButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OilButton" />
</androidx.constraintlayout.widget.ConstraintLayout>