<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/HomeName"
        android:layout_width="143dp"
        android:layout_height="59dp"
        android:layout_marginTop="80dp"
        android:text="@string/HomeName"
        android:textColor="#ffffff"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/InsuranceButton"
        android:layout_marginTop="64dp"
        android:text="@string/InsuranceButton"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:textColor="#ffffff"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeName" />

    <Button
        android:id="@+id/TaxesAndDuesButton"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_background"
        android:text="@string/TaxesAndDuesButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InsuranceButton" />

    <Button
        android:id="@+id/CarConsumablesButton"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_background"
        android:text="@string/CarConsumablesButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaxesAndDuesButton" />

    <Button
        android:id="@+id/ChangeCarButton"
        android:layout_width="296dp"
        android:layout_height="62dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_background"
        android:text="@string/ChangeCarButton"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CarConsumablesButton" />
</androidx.constraintlayout.widget.ConstraintLayout>