<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".InsuranceUpdateActivity">

    <Button
        android:id="@+id/StartDateButton"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/StartDate"
        android:textColor="#ffffff"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InsuranceTypeSpinner" />

    <Button
        android:id="@+id/EndDateButton"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/button_background"
        android:text="@string/EndDate"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartDateButton" />

    <Spinner
        android:id="@+id/InsuranceTypeSpinner"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="#ffffff"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/InsuranceUpdateButton"
        android:layout_width="181dp"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:text="@string/UpdateButton"
        android:textColor="#ffffff"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndDateButton" />
</androidx.constraintlayout.widget.ConstraintLayout>